# jobsearch

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  MCP.md  Makefile  README.md  STATUS.md  TODO  add_sample_recruiters.py  career_data.db.bak  combined_profile.md  conftest.py  errors.txt  job_data.json  job_info.json  jobsearch-mcp.code-workspace  jobsearch.code-workspace  llms.txt  mkdocs.yml  models.py  pytest.ini  requirements.txt  setup.py  today_jobs.json
.github/: copilot-instructions.md  pages.yml
config/: README.md  example.gcs.json  gcs.json
docs/: ARCHITECTURE.md  CORE.md  DEVELOPMENT.md  GlassDoor.md  STATUS.md  VS_CODE_UI.md  ai.md  conf.py  database.md  feature_agent_architecture.md  feature_architecture.md  feature_design.md  feature_templates.md  index.md  index.rst  monitoring.md  profile.json  pydantic_ai_migration.md  storage.md  structured_output.md
jobsearch/app/: .env.example  Dockerfile  Makefile  README.md  __init__.py  dependencies.py  docker-compose.yml  main.py  models.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
jobsearch/app/.github/workflows/: ci.yml
jobsearch/app/models/: __init__.py  documents.py  jobs.py  profile.py
jobsearch/app/routers/: __init__.py  documents.py  jobs.py  profile.py  strategies.py  web_presence.py
jobsearch/app/scripts/: init_api.py
jobsearch/app/tests/: conftest.py  test_documents.py  test_jobs.py  test_profile.py  test_strategies.py  test_web_presence.py
jobsearch/app/tests/data/: documents.json  jobs.json  profiles.json  strategies.json  web_presence.json
migrations/: alembic.ini  (+3 more)
(+257 files in other folders)
